# gatekeeper

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.local-llm.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: Dockerfile
api/app/: main.py
app/: main.py  requirements.txt
app/api/: routes.py
app/db/: logger.py
app/llm/: factory.py  interface.py  llm_adaptater.py  local_adapter.py  online_adapter.py
app/verification/: preprocessing.py  verifier.py
app/verification/prompts/: default-3b.yaml  default-9b.yaml  default.yaml  gemma.yaml  llama.yaml  llama32.yaml  test.yaml
app/verification/rules/: default.yaml
db/: init.sql
demo/: attack_demo.py  demo.py  demo_prompt.txt  preprocessing_demo.py
evaluation/: create_eval_dataset.ipynb  evaluation.ipynb  requirements.txt  results.md  smoke_test.ipynb
llm/: entrypoint.sh
src/zagents/: core.py
tests/: test_import.py
